--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,12 +3,12 @@ version: '3.8'
 services:
   db:
     image: postgres:latest
-    container_name: postgres
+    container_name: play_ground_db
     environment:
       POSTGRES_USER: test
       POSTGRES_PASSWORD: test
       POSTGRES_DB: test
       POSTGRES_INITDB_ARGS: --encoding=UTF-8
     ports:
-      - "5432:5432"
+      - "5434:5432"
 
