--- a/package.json
+++ b/package.json
@@ -22,9 +22,14 @@
   "dependencies": {
     "@js-joda/core": "^5.5.2",
     "@nestjs/common": "^9.0.0",
+    "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
+    "@types/js-yaml": "^4.0.5",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
+    "js-yaml": "^4.1.0",
     "pg": "^8.9.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
@@ -60,15 +65,15 @@
       "json",
       "ts"
     ],
-    "globals": {
-      "ts-jest": {
-        "isolatedModules": true
-      }
-    },
     "rootDir": ".",
     "testRegex": ".*\\.spec\\.ts$",
     "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
+      "^.+\\.(t|j)s$": [
+        "ts-jest",
+        {
+          "isolatedModules": true
+        }
+      ]
     },
     "collectCoverageFrom": [
       "**/*.(t|j)s"
@@ -80,7 +85,8 @@
       "<rootDir>/libs/"
     ],
     "moduleNameMapper": {
-      "^@app/entity(|/.*)$": "<rootDir>/libs/entity/src/$1"
+      "^@app/entity(|/.*)$": "<rootDir>/libs/entity/src/$1",
+      "^@app/config(|/.*)$": "<rootDir>/libs/config/src/$1"
     }
   }
 }
