--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "supertest": "^6.1.3",
     "ts-jest": "29.0.3",
     "ts-loader": "^9.2.3",
+    "ts-morph": "^18.0.0",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.1.1",
     "typescript": "^4.7.4"
