--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "@nestjs/swagger": "^6.2.1",
     "@nestjs/typeorm": "^9.0.1",
     "@types/js-yaml": "^4.0.5",
+    "@types/node-fetch": "^2.6.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "js-yaml": "^4.1.0",
+    "node-fetch": "2",
     "pg": "^8.9.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
