WebClient 추상 메소드 생성

--- a/package.json
+++ b/package.json
@@ -96,7 +96,8 @@
     "moduleNameMapper": {
       "^@app/entity(|/.*)$": "<rootDir>/libs/entity/src/$1",
       "^@app/config(|/.*)$": "<rootDir>/libs/config/src/$1",
-      "^@app/logger(|/.*)$": "<rootDir>/libs/logger/src/$1"
+      "^@app/logger(|/.*)$": "<rootDir>/libs/logger/src/$1",
+      "^@app/web-client(|/.*)$": "<rootDir>/libs/web-client/src/$1"
     }
   }
 }
