--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/node-fetch": "^2.6.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "got": "^11.8.2",
     "js-yaml": "^4.1.0",
     "node-fetch": "2",
     "pg": "^8.9.0",
@@ -58,6 +59,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "29.3.1",
+    "nock": "^13.3.1",
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
