--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "test:e2e": "jest --config ./apps/nestjs-playground/test/jest-e2e.json",
     "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/.bin/typeorm -d scripts/migration/MigrationConfig.ts",
     "migrate": "yarn typeorm migration:run",
-    "migration-generate": "yarn typeorm migration:generate ./scripts/migration/Migration --pretty && yarn eslint --fix ./scripts/migration"
+    "migration-generate": "yarn typeorm migration:generate ./scripts/migration/Migration --pretty && yarn eslint --fix ./scripts/migration",
+    "swagger-generate": "jest swagger.generator.spec.ts"
   },
   "dependencies": {
     "@js-joda/core": "^5.5.2",
@@ -58,7 +59,9 @@
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "husky": "^8.0.3",
     "jest": "29.3.1",
+    "lint-staged": "^13.2.2",
     "nock": "^13.3.1",
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
