--- a/tsconfig.json
+++ b/tsconfig.json
@@ -47,6 +47,12 @@
       ],
       "@app/web-client/*": [
         "libs/web-client/src/*"
+      ],
+      "@app/file-manager": [
+        "libs/file-manager/src"
+      ],
+      "@app/file-manager/*": [
+        "libs/file-manager/src/*"
       ]
     }
   }
