localstack 환경 세팅

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,3 +12,12 @@ services:
     ports:
       - "5434:5432"
 
+  localstack:
+    image: localstack/localstack:0.14.1
+    container_name: play_ground_localstack
+    ports:
+      - "4567:4566"
+    volumes:
+      - "./scripts/localstack:/docker-entrypoint-initaws.d"
+    environment:
+      - SERVICES=sns
