--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "swagger-generate": "jest swagger.generator.spec.ts"
   },
   "dependencies": {
+    "@aws-sdk/client-sns": "^3.354.0",
     "@js-joda/core": "^5.5.2",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.1",
@@ -108,7 +109,8 @@
       "^@app/config(|/.*)$": "<rootDir>/libs/config/src/$1",
       "^@app/logger(|/.*)$": "<rootDir>/libs/logger/src/$1",
       "^@app/web-client(|/.*)$": "<rootDir>/libs/web-client/src/$1",
-      "^@app/file-manager(|/.*)$": "<rootDir>/libs/file-manager/src/$1"
+      "^@app/file-manager(|/.*)$": "<rootDir>/libs/file-manager/src/$1",
+      "^@app/event-publisher(|/.*)$": "<rootDir>/libs/event-publisher/src/$1"
     }
   },
   "lint-staged": {
