--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,6 +51,9 @@ jobs:
         if: steps.cache-dependencies.cache-hit != 'true'
         run: yarn install
 
+      - name: Run test
+        run: yarn test:ci
+
       - name: notify failure alarm
         if: failure()
         uses: rtCamp/action-slack-notify@v2.0.0
@@ -59,5 +62,6 @@ jobs:
           SLACK_COLOR: 'danger'
           SLACK_TITLE: 'Build Failure'
           SLACK_MESSAGE: 'The build and deployment process failed.'
+          SLACK_ICON: https://cdn.rallit.com/image/2022-10-28/cIX_VGiCDs947_clP_nj_.png
 
 
