--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "jest": "29.3.1",
     "lint-staged": "^13.2.2",
     "nock": "^13.3.1",
+    "pg-mem": "^2.6.13",
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
