--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/.bin/typeorm -d scripts/migration/MigrationConfig.ts",
     "migrate": "yarn typeorm migration:run",
     "migration-generate": "yarn typeorm migration:generate ./scripts/migration/Migration --pretty && yarn eslint --fix ./scripts/migration",
-    "swagger-generate": "jest swagger.generator.spec.ts"
+    "swagger-generate": "jest swagger.generator.spec.ts",
+    "release": "./scripts/github/release.sh"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.354.0",
