--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "husky": "^8.0.3",
     "jest": "29.3.1",
+    "jest-mock-extended": "^3.0.5",
     "lint-staged": "^13.2.2",
     "nock": "^13.3.1",
     "pg-mem": "^2.6.13",
