--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/node-fetch": "^2.6.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "cls-rtracer": "^2.6.3",
     "got": "^11.8.2",
     "js-yaml": "^4.1.0",
     "node-fetch": "2",
