--- a/package.json
+++ b/package.json
@@ -38,12 +38,14 @@
     "@nestjs/swagger": "^6.2.1",
     "@nestjs/typeorm": "^9.0.1",
     "@types/js-yaml": "^4.0.5",
+    "@types/mustache": "^4.2.3",
     "@types/node-fetch": "^2.6.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cls-rtracer": "^2.6.3",
     "got": "^11.8.2",
     "js-yaml": "^4.1.0",
+    "mustache": "^4.2.0",
     "node-fetch": "2",
     "pdf-lib": "^1.17.1",
     "pdfjs-dist": "^3.7.107",
