libs > ChatGPT 모듈 생성

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -89,6 +89,12 @@
       ],
       "@app/template/*": [
         "libs/template/src/*"
+      ],
+      "@app/chat-gpt": [
+        "libs/chat-gpt/src"
+      ],
+      "@app/chat-gpt/*": [
+        "libs/chat-gpt/src/*"
       ]
     }
   }
