--- a/package.json
+++ b/package.json
@@ -125,7 +125,8 @@
       "^@app/event-listener(|/.*)$": "<rootDir>/libs/event-listener/src/$1",
       "^@app/event-emitter(|/.*)$": "<rootDir>/libs/event-emitter/src/$1",
       "^@app/mailer(|/.*)$": "<rootDir>/libs/mailer/src/$1",
-      "^@app/template(|/.*)$": "<rootDir>/libs/template/src/$1"
+      "^@app/template(|/.*)$": "<rootDir>/libs/template/src/$1",
+      "^@app/chat-gpt(|/.*)$": "<rootDir>/libs/chat-gpt/src/$1"
     }
   },
   "lint-staged": {
