--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "js-yaml": "^4.1.0",
     "mustache": "^4.2.0",
     "node-fetch": "2",
+    "openai": "^4.12.1",
     "pdf-lib": "^1.17.1",
     "pdfjs-dist": "^3.7.107",
     "pg": "^8.9.0",
