CryptoModule 서브 모듈 구현

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -95,6 +95,12 @@
       ],
       "@app/chat-gpt/*": [
         "libs/chat-gpt/src/*"
+      ],
+      "@app/crypto": [
+        "libs/crypto/src"
+      ],
+      "@app/crypto/*": [
+        "libs/crypto/src/*"
       ]
     }
   }
