[main] notification-manager 서브 모듈 생성

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -101,6 +101,12 @@
       ],
       "@app/crypto/*": [
         "libs/crypto/src/*"
+      ],
+      "@app/notification-manager": [
+        "libs/notification-manager/src"
+      ],
+      "@app/notification-manager/*": [
+        "libs/notification-manager/src/*"
       ]
     }
   }
