--- a/package.json
+++ b/package.json
@@ -129,7 +129,8 @@
       "^@app/mailer(|/.*)$": "<rootDir>/libs/mailer/src/$1",
       "^@app/template(|/.*)$": "<rootDir>/libs/template/src/$1",
       "^@app/chat-gpt(|/.*)$": "<rootDir>/libs/chat-gpt/src/$1",
-      "^@app/crypto(|/.*)$": "<rootDir>/libs/crypto/src/$1"
+      "^@app/crypto(|/.*)$": "<rootDir>/libs/crypto/src/$1",
+      "^@app/notification-manager(|/.*)$": "<rootDir>/libs/notification-manager/src/$1"
     }
   },
   "lint-staged": {
