--- a/package.json
+++ b/package.json
@@ -71,7 +71,11 @@
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.0.1",
+    "eslint-config-async": "^2.0.2",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jest-formatting": "^3.1.0",
+    "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.0.0",
     "husky": "^8.0.3",
     "jest": "29.3.1",
