feat(bulk-action): BulkActionModule 추가 및 라이브러리 등록

--- a/package.json
+++ b/package.json
@@ -137,7 +137,8 @@
       "^@app/chat-gpt(|/.*)$": "<rootDir>/libs/chat-gpt/src/$1",
       "^@app/crypto(|/.*)$": "<rootDir>/libs/crypto/src/$1",
       "^@app/notification-manager(|/.*)$": "<rootDir>/libs/notification-manager/src/$1",
-      "^@app/json-db(|/.*)$": "<rootDir>/libs/json-db/src/$1"
+      "^@app/json-db(|/.*)$": "<rootDir>/libs/json-db/src/$1",
+      "^@app/bulk-action(|/.*)$": "<rootDir>/libs/bulk-action/src/$1"
     }
   },
   "lint-staged": {
