Redis 추상화 레이어(libs/redis) 추가 및 bulk-action에서 ioredis 직접 의존 제거
- RedisService, RedisModule을 별도 라이브러리(libs/redis)로 분리
- FairQueueService, LuaScriptLoader에서 ioredis 직접 import 제거
- RedisProvider 삭제, BULK_ACTION_CONFIG를 BulkActionConfig로 이동
- JobGroupHash 타입 추가

--- a/package.json
+++ b/package.json
@@ -138,7 +138,8 @@
       "^@app/crypto(|/.*)$": "<rootDir>/libs/crypto/src/$1",
       "^@app/notification-manager(|/.*)$": "<rootDir>/libs/notification-manager/src/$1",
       "^@app/json-db(|/.*)$": "<rootDir>/libs/json-db/src/$1",
-      "^@app/bulk-action(|/.*)$": "<rootDir>/libs/bulk-action/src/$1"
+      "^@app/bulk-action(|/.*)$": "<rootDir>/libs/bulk-action/src/$1",
+      "^@app/redis(|/.*)$": "<rootDir>/libs/redis/src/$1"
     }
   },
   "lint-staged": {
